[tool.poetry]
name = "vps-tools"
version = "0.1.0"
description = "A collection of tools for VPS management"
authors = ["RDY8799 <your_email@example.com>"]
license = "MIT"

dependencies = {
    python = "^3.8"
    click = "^8.0"
}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"